# application-web

./: README.md
back/: .gitignore  README.md  go.mod  go.sum  main.go
back/api/v1/: enter.go
back/api/v1/system/: dashboard.go  enter.go  faceAlarm.go  faceTask.go  file.go  query_record.go  receive_alarm.go  sys_base.go  sys_basic.go  task.go  task_config.go
back/config/: application-web.yaml  config.go
back/database/: dbconnect.go
back/global/: global.go
back/initialization/: init.go  router.go  server.go
back/logger/: logger.go
back/middleware/: auth.go  block.go  timeout.go
back/pkg/buserr/: error.go  errors.go
back/pkg/constant/: errs.go
back/pkg/dto/: basic.go  dashboard.go  facetask.go  login.go  result.go  task.go
back/pkg/handle/: handle.go
back/pkg/model/: facetask.go  systemConf.go  task.go  user.go
back/pkg/repo/: user.go
back/pkg/service/: basic.go  dashboard.go  token.go
back/pkg/utils/cmd/: cmd.go
back/pkg/utils/common/: common.go  util.go
back/pkg/utils/ffmpeg/: ffmpeg.go
back/pkg/utils/files/: file_op.go  fileinfo.go
back/pkg/utils/http/: get.go
back/pkg/utils/httpclient/: httpclient.go
back/router/: enter.go
back/router/system/: dashboard.go  enter.go  faceAlarm.go  faceTask.go  file.go  query_record.go  receiveAlarm.go  sys_base.go  task.go
back/scrip/: application-web.service  get_frame  install.sh  package.sh  uninstall.sh  upgrade.sh
docker/: scirp.sh
front/: .env.development  .env.production  .env.test  .eslintrc.cjs  .prettierrc.json  .stylelintrc.cjs  README.md  commitlint.config.cjs  components.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
front/src/: App.vue  main.ts  permission.ts  setting.ts  vite-env.d.ts
front/src/api/home/: index.ts  (+1 more)
front/src/components/: components.ts  index.ts
front/src/layout/: index.vue
front/src/router/: index.ts  routes.ts
front/src/store/: index.ts
front/src/styles/: reset.scss  variable.scss
front/src/utils/: request.ts  time.ts  token.ts  withInstall.ts
tools/get_frame/: CMakeLists.txt
tools/get_frame/nlohmann/: json.hpp
tools/get_frame/src/: get_frame.cpp
(+46 files in other folders)
